syntax = "proto3";
package paralus.dev.types.common.v3;

message IsRequestAllowedRequest {
    string url = 1;
    string method = 2;
    string xSessionToken = 3;
    string xApiKey = 4;
    string cookie = 5;
    string org = 6;
    string project = 7;
    string namespace = 8;
    bool noAuthz = 9;
    string xApiToken = 10;
}

enum RequestStatus {
    REQUEST_STATUS_NOT_SET = 0;
    REQUEST_STATUS_REQUEST_NOT_AUTHENTICATED = 1;
    REQUEST_STATUS_REQUEST_METHOD_OR_URL_NOT_ALLOWED = 2;
    REQUEST_STATUS_REQUEST_ALLOWED = 3;
}

// Remove unnecessary fields
message ResourceURLMethods {
    repeated string methods = 1;
}

enum AuthType {
    AUTH_TYPE_AUTH_TYPE_NOT_SET = 0;
    AUTH_TYPE_SESSION_LOGIN = 1;
    AUTH_TYPE_API_KEY = 2;
}

enum ClientType {
    CLIENT_TYPE_CLIENT_TYPE_NOT_SET = 0;
    CLIENT_TYPE_BROWSER = 1;
    CLIENT_TYPE_CLI = 2;
}

message NamespaceData {
    string project_id = 1;
    string namespace_id = 2;
    string role = 3;
}

message ProjectRole {
    string project = 1;
    string project_id = 2;
    string role = 3;
}

message ProjectData {
    bool all = 1;
    repeated ProjectRole list = 2;
}

message SessionData {
    string account = 1;
    string organization = 2;
    string partner = 3;
    string role = 4;
    repeated string permissions = 5;
    string partner_domain = 6;
    string username = 7;
    bool is_super_admin = 8;
    bool is_partner_admin = 9;
    bool is_sso_user = 10;
    map<string, ResourceURLMethods> resource_urls = 11;
    string ttl = 12;
    repeated string groups = 13;
    AuthType auth_type = 14;
    string idp = 15;
    map<string, bool> is_org_admin = 16;
    ClientType client_type = 17;
    string client_host = 18;
    string client_ip = 19;
    string client_ua = 20;
    map<string, bool> is_all_ns_access = 21;
    repeated NamespaceData namespaces = 22;
    ProjectData project = 23;
}

message IsRequestAllowedResponse {
    RequestStatus status = 1;
    string reason = 2;
    SessionData sessionData = 3;
}
